--- a/Firebase/firebase.json
+++ b/Firebase/firebase.json
@@ -1,8 +1,8 @@
 {
   "functions": [
     {
-      "source": "functions",
-      "codebase": "default",
+      "source": "functions/v2",
+      "codebase": "v2",
       "disallowLegacyRuntimeConfig": true,
       "ignore": [
         "venv",
@@ -12,7 +12,7 @@
         "*.local"
       ],
       "runtime": "python313"
-    }
+    },
   ],
   "emulators": {
     "functions": {
